...
//  Copyright © 2019 茆大蔚. All rights reserved.
//

import Foundation

enum Team : String{
    case Hawks = "Hawks", Celtics = "Celtics", Nets = "Nets", Hornets = "Hornets", Bulls = "Bulls", Cavaliers = "Cavaliers", Mavericks = "Mavericks", Nuggets = "Nuggets", Pistons = "Pistons", Warriors = "Warriors", Rockets = "Rockets", Pacers = "Pacers", Clippers = "Clippers", Lakers = "Lakers", Grizzlies = "Grizzlies", Heat = "Heat", Bucks = "Bucks", Timberwolves = "Timberwolves", Pelicans = "Pel
    
    var teamid:Int{
        switch self{
        case .Hawks: return 1
        case .Celtics: return 2
        case .Nets: return 3
...
        case .Rockets: return "Houston Rockets"
        case .Pacers: return "Indiana Pacers"
        case .Clippers: return "Los Angeles Clippers"
        case .Lakers: return "Los Angeles Lakers"
        case .Grizzlies: return "Memphis Grizzlies"
        case .Heat: return "Miami Heat"
        case .Bucks: return "Milwaukee Bucks"
        case .Timberwolves: return "Minnesota Timberwolves"
        case .Pelicans: return "New Orleans Pelicans"
        case .Knicks: return "New York Knicks"
        case .Thunder: return "Oklahoma City Thunder"
        case .Magic: return "Orlando Magic"
        case .SeventySix: return "Philadelphia 76ers"
...
        case .Jazz: return "Utah Jazz"
        case .Wizards: return "Washington Wizards"
        }
    }
    var imagename:String{
        switch self{
        case .Hawks: return "hawks"
        case .Celtics: return "celtics"
        case .Nets: return "nets"
        case .Hornets: return "hornets"
        case .Bulls: return "bulls"
        case .Cavaliers: return "cavaliers"
        case .Mavericks: return "mavericks"
        case .Nuggets: return "nuggets"
        case .Pistons: return "pistons"
        case .Warriors: return "warriors"
        case .Rockets: return "rockets"
        case .Pacers: return "pacers"
        case .Clippers: return "clippers"
        case .Lakers: return "lakers"
        case .Grizzlies: return "grizzlies"
        case .Heat: return "heat"
        case .Bucks: return "bucks"
        case .Timberwolves: return "timberwolves"
        case .Pelicans: return "pelicans"
        case .Knicks: return "knicks"
        case .Thunder: return "thunder"
        case .Magic: return "magic"
        case .SeventySix: return "76ers"
        case .Suns: return "suns"
        case .Trail_Blazers: return "trail_blazers"
        case .Kings: return "kings"
        case .Spurs: return "spurs"
...
