...
            </objects>
            <point key="canvasLocation" x="-360" y="-2096.8309859154929"/>
        </scene>
        <!--Profile Details-->
        <scene sceneID="PvK-3j-Q7L">
            <objects>
                <viewController title="Profile Details" id="TE2-Zg-UhQ" customClass="ProfileDetailViewController" customModule="Ballin" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="cz3-5j-ChP">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lblPosition" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ziw-gC-zJN">
                                <rect key="frame" x="27" y="143" width="265" height="24"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e2x-c5-diE">
                                <rect key="frame" x="272" y="41" width="32" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="32" id="Wec-aj-opO"/>
                                    <constraint firstAttribute="width" secondItem="e2x-c5-diE" secondAttribute="height" multiplier="16:15" id="Y5a-rU-lTZ"/>
                                </constraints>
                                <state key="normal" title="Button" image="refresh"/>
                                <connections>
                                    <action selector="refresh:" destination="9Ed-r2-2Bb" eventType="touchUpInside" id="i37-XA-z7g"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="Uyd-rU-tLi" firstAttribute="leading" secondItem="lbR-bd-f0k" secondAttribute="leading" id="dMg-64-E0k"/>
                            <constraint firstItem="wzf-7q-Asj" firstAttribute="leading" relation="lessThanOrEqual" secondItem="nvO-3t-9c3" secondAttribute="trailing" constant="8" id="pae-4o-w4v"/>
                            <constraint firstItem="e2x-c5-diE" firstAttribute="top" secondItem="wzf-7q-Asj" secondAttribute="top" id="rxo-Fj-avb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="U5R-Pi-TYg"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Games" image="game" id="uGF-6z-pjS"/>
                    <connections>
                        <outlet property="GamesView" destination="Uyd-rU-tLi" id="Eu6-Mf-6bc"/>
                        <outlet property="buttnInfo" destination="nvO-3t-9c3" id="txl-cZ-tKY"/>
                        <outlet property="dateInputTextField" destination="wzf-7q-Asj" id="l8c-V6-dLg"/>
                    </connections>
                </viewController>
...
            </objects>
            <point key="canvasLocation" x="204.375" y="419.36619718309862"/>
        </scene>
        <!--Player Details-->
        <scene sceneID="z7a-Go-Gbj">
            <objects>
                <viewController restorationIdentifier="PlayerDetailViewController" storyboardIdentifier="PlayerDetailViewController" title="Player Details" id="8lq-3o-34R" customClass="PlayerDetailViewController" customModule="Ballin" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8oc-ZO-Mcj">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tnH-4T-Orx">
                                <rect key="frame" x="16" y="31" width="288" height="116"/>
...
            <point key="canvasLocation" x="363.75" y="-567.25352112676057"/>
        </scene>
        <!--Team-->
        <scene sceneID="w2y-Dh-ZC0">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YV0-IW-6GZ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Team" image="team" id="WwH-hu-mmA"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="o4I-PH-dUw">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="-1419" y="419"/>
        </scene>
        <!--Player-->
        <scene sceneID="HBK-Kk-NOZ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R9q-HQ-ILC" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Player" image="player" id="exS-jZ-iF8"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qd1-rT-WXs">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="-561" y="-566"/>
        </scene>
        <!--Profile-->
        <scene sceneID="MON-NW-H28">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3qu-bl-vJU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="profile" id="RgL-U8-jX2"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iHa-3U-rjl">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
