...
            self.GamesView.reloadData()
        }
        
        else {
            let alertController = UIAlertController(title: nil, message: "No Games were scheduled on selected date.", preferredStyle: .actionSheet)
            
            let cancelAction = UIAlertAction(title: "Ok", style: .cancel, handler: { (alert: UIAlertAction!) -> Void in
                //  Do something here upon cancellation.
            })
            
            alertController.addAction(cancelAction)
            
            self.present(alertController, animated: true, completion: nil)
...
